<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorApp"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>



    <include layout="@layout/fragment_usuario" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/grupofab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:fab_labelStyle="@style/etiqueta"
        app:fab_addButtonColorNormal="@color/colorApp"
        app:fab_addButtonColorPressed="@color/colorAppDark">



        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@android:drawable/ic_menu_info_details"
            app:fab_size="mini"
            app:fab_colorNormal="@color/colorFondoMenu"
            app:fab_colorPressed="@color/colorAppDark"
            app:fab_title="@string/acercaDe"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@android:drawable/ic_menu_info_details"
            app:fab_size="mini"
            app:fab_colorNormal="@color/colorFondoMenu"
            app:fab_colorPressed="@color/colorAppDark"
            app:fab_title="@string/perfil"
            />
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@android:drawable/ic_menu_info_details"
            app:fab_size="mini"
            app:fab_colorNormal="@color/colorFondoMenu"
            app:fab_colorPressed="@color/colorAppDark"
            app:fab_title="@string/servicio_tecnico"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/speaker_warm"
            app:fab_size="mini"
            app:fab_colorNormal="@color/colorFondoMenu"
            app:fab_colorPressed="@color/colorApp"
            app:fab_title="@string/sistema_musica"
            />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</androidx.coordinatorlayout.widget.CoordinatorLayout>