<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CamaraPortal">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorApp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorApp"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout4" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/grupofab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:fab_addButtonColorNormal="@color/colorApp"
        app:fab_addButtonColorPressed="@color/colorFondoMenu"
        app:fab_labelStyle="@style/etiqueta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorFondoMenu"
            app:fab_colorPressed="@color/colorApp"
            app:fab_icon="@drawable/acercade"
            app:fab_size="mini"
            app:fab_title="@string/acercaDe" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorFondoMenu"
            app:fab_colorPressed="@color/colorApp"
            app:fab_icon="@drawable/user"
            app:fab_size="mini"
            app:fab_title="@string/perfil" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorFondoMenu"
            app:fab_colorPressed="@color/colorApp"
            app:fab_icon="@drawable/help"
            app:fab_size="mini"
            app:fab_title="@string/servicio_tecnico" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorFondoMenu"
            app:fab_colorPressed="@color/colorApp"
            app:fab_icon="@drawable/speaker_warm"
            app:fab_size="mini"
            app:fab_title="@string/sistema_musica" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorFondoMenu"
            app:fab_colorPressed="@color/colorApp"
            app:fab_icon="@drawable/blueprint1"
            app:fab_size="mini"
            app:fab_title="@string/mapa" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorFondoMenu"
            app:fab_colorPressed="@color/colorApp"
            app:fab_icon="@drawable/camera1"
            app:fab_size="mini"
            app:fab_title="Timbre" />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</androidx.constraintlayout.widget.ConstraintLayout>